--- a/Projecte0/Projecte0/Vista/Registrarse.xaml
+++ b/Projecte0/Projecte0/Vista/Registrarse.xaml
@@ -6,16 +6,18 @@
         xmlns:local="clr-namespace:Projecte0"
         mc:Ignorable="d"
         Title="Registrarse" Height="450" Width="800">
-    <Grid>
-        <Label Content="Dni:" HorizontalAlignment="Left" Margin="278,90,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="txBoxDniUsuari" HorizontalAlignment="Left" Margin="314,94,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Nom:" HorizontalAlignment="Left" Margin="278,116,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="txBoxNomUsuari" HorizontalAlignment="Left" Margin="322,120,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Cognom:" HorizontalAlignment="Left" Margin="278,147,0,0" VerticalAlignment="Top"/>
-        <TextBox Name="txBoxCognom" HorizontalAlignment="Center" Margin="0,151,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Contrasenya:" HorizontalAlignment="Left" Margin="279,178,0,0" VerticalAlignment="Top"/>
-        <PasswordBox Name="pwdUsuari" HorizontalAlignment="Left" Margin="362,182,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button Name="btnRegistrar" Content="Registrar-se" HorizontalAlignment="Left" Margin="279,209,0,0" VerticalAlignment="Top" Width="203" Click="btnRegistrar_Click"/>
+    <Grid Background="Wheat">
+        <Label Content="Dni:" HorizontalAlignment="Left" Margin="298,143,0,0" VerticalAlignment="Top" Foreground="DarkRed"/>
+        <TextBox Name="txBoxDniUsuari" HorizontalAlignment="Left" Margin="334,147,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="168"/>
+        <Label Content="Nom:" HorizontalAlignment="Left" Margin="298,172,0,0" VerticalAlignment="Top" Foreground="DarkRed"/>
+        <TextBox Name="txBoxNomUsuari" HorizontalAlignment="Left" Margin="342,176,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="160"/>
+        <Label Content="Cognom:" HorizontalAlignment="Left" Margin="298,202,0,0" VerticalAlignment="Top" Foreground="DarkRed"/>
+        <TextBox Name="txBoxCognom" HorizontalAlignment="Left" Margin="360,206,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="142"/>
+        <Label Content="Contrasenya:" HorizontalAlignment="Left" Margin="298,231,0,0" VerticalAlignment="Top" Foreground="DarkRed"/>
+        <PasswordBox Name="pwdUsuari" HorizontalAlignment="Left" Margin="382,235,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button Name="btnRegistrar" Content="Registrar-se" HorizontalAlignment="Center" Margin="0,262,0,0" VerticalAlignment="Top" Width="204" Click="btnRegistrar_Click" Background="DarkRed" Foreground="White"/>
+        <Image Margin="360,27,360,329" Source="/GironaBrasa.PNG" Stretch="Fill"/>
 
     </Grid>
+
 </Window>
