--- a/Projecte0/Projecte0/Vista/MainWindowAdministrador.xaml
+++ b/Projecte0/Projecte0/Vista/MainWindowAdministrador.xaml
@@ -13,7 +13,7 @@
                     <ComboBox Name="cBoxRestaurant" HorizontalAlignment="Left" Margin="68,43,0,0" VerticalAlignment="Top" Width="120"/>
                     <Label Content="Selecciona el restaurant" HorizontalAlignment="Left" Margin="60,17,0,0" VerticalAlignment="Top"/>
                     <Button Name="btnModificarRestaurant" Content="Modificar restaurant" HorizontalAlignment="Left" Margin="68,84,0,0" VerticalAlignment="Top"/>
-                    <Button Name="btnEliminarRestaurant" Content="Eliminar restaurant" HorizontalAlignment="Left" Margin="68,125,0,0" VerticalAlignment="Top" Width="111" Foreground="Red"/>
+                    <Button Name="btnEliminarRestaurant" Content="Eliminar restaurant" HorizontalAlignment="Left" Margin="68,125,0,0" VerticalAlignment="Top" Width="111" Foreground="Red" Click="btnEliminarRestaurant_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Inserir restaurant">
