--- a/Projecte0/Projecte0/Vista/MainWindowAdministrador.xaml
+++ b/Projecte0/Projecte0/Vista/MainWindowAdministrador.xaml
@@ -12,20 +12,25 @@
                 <Grid Background="#FFE5E5E5">
                     <ComboBox Name="cBoxRestaurant" HorizontalAlignment="Left" Margin="68,43,0,0" VerticalAlignment="Top" Width="120"/>
                     <Label Content="Selecciona el restaurant" HorizontalAlignment="Left" Margin="60,17,0,0" VerticalAlignment="Top"/>
-                    <Button Name="btnModificarRestaurant" Content="Modificar restaurant" HorizontalAlignment="Left" Margin="68,84,0,0" VerticalAlignment="Top"/>
-                    <Button Name="btnEliminarRestaurant" Content="Eliminar restaurant" HorizontalAlignment="Left" Margin="68,125,0,0" VerticalAlignment="Top" Width="111" Foreground="Red"/>
+                    <Button Name="btnModificarRestaurant" Content="Modificar restaurant" HorizontalAlignment="Left" Margin="68,84,0,0" VerticalAlignment="Top" Click="btnModificarRestaurant_Click"/>
+                    <Button Name="btnEliminarRestaurant" Content="Eliminar restaurant" HorizontalAlignment="Left" Margin="68,125,0,0" VerticalAlignment="Top" Width="111" Foreground="Red" Click="btnEliminarRestaurant_Click"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Inserir restaurant">
                 <Grid Background="#FFE5E5E5">
                     <Label Content="Nom restaurant:" HorizontalAlignment="Left" Margin="52,34,0,0" VerticalAlignment="Top"/>
                     <TextBox Name="txBoxNomRestaurant" HorizontalAlignment="Left" Margin="148,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                    <TextBox HorizontalAlignment="Left" Margin="112,69,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="155"/>
+                    <TextBox Name="txBoxDireccioRestaurant" HorizontalAlignment="Left" Margin="112,69,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="155"/>
                     <Label Content="Direccio:" HorizontalAlignment="Left" Margin="52,65,0,0" VerticalAlignment="Top" />
                     <Label Content="Tipus de cuina:" HorizontalAlignment="Left" Margin="52,96,0,0" VerticalAlignment="Top"/>
-                    <TextBox HorizontalAlignment="Left" Margin="146,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <TextBox Name="txBoxTipusCuina" HorizontalAlignment="Left" Margin="146,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
                     <Label Content="Capacitat:" HorizontalAlignment="Left" Margin="299,34,0,0" VerticalAlignment="Top"/>
-                    <TextBox HorizontalAlignment="Left" Margin="366,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <TextBox Name="txBoxCapacitatRsstaurant" HorizontalAlignment="Left" Margin="366,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="URL foto:" HorizontalAlignment="Left" Margin="299,60,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="txBoxURLFotoRestaurant" HorizontalAlignment="Left" Margin="366,65,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
+                    <Label Content="URL fotos:" HorizontalAlignment="Left" Margin="299,96,0,0" VerticalAlignment="Top"/>
+                    <Button Name="btnCargarFotos" Content="Cargar fitxer" HorizontalAlignment="Left" Margin="368,99,0,0" VerticalAlignment="Top" Width="118" Click="btnCargarFotos_Click"/>
+                    <Button Name="btnCrearRestaurant" Content="CREAR RESTAURANT" HorizontalAlignment="Left" Margin="52,127,0,0" VerticalAlignment="Top" Width="214" Click="btnCrearRestaurant_Click"/>
                 </Grid>
             </TabItem>
         </TabControl>
