--- a/Projecte0/Projecte0/Vista/FinestraModificarRestaurant.xaml
+++ b/Projecte0/Projecte0/Vista/FinestraModificarRestaurant.xaml
@@ -15,7 +15,7 @@
         <TextBox Name="txBoxTipusCuina" HorizontalAlignment="Left" Margin="146,100,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
         <Label Content="Capacitat:" HorizontalAlignment="Left" Margin="299,34,0,0" VerticalAlignment="Top" Foreground="DarkRed"/>
         <TextBox Name="txBoxCapacitatRestaurant" HorizontalAlignment="Left" Margin="366,38,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-        <Button Name="btnCrearRestaurant" Content="ACTUALIZAR RESTAURANT" HorizontalAlignment="Left" Margin="299,71,0,0" VerticalAlignment="Top" Width="187" Click="btnUpdateRestaurant_Click"/>
+        <Button Name="btnCrearRestaurant" Content="ACTUALIZAR RESTAURANT" HorizontalAlignment="Left" Margin="299,71,0,0" VerticalAlignment="Top" Width="187" Click="btnUpdateRestaurant_Click" Background="DarkRed" Foreground="White"/>
 
     </Grid>
 </Window>
